[package]
name = "fsf"
version = "0.0.0-SNAPSHOT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.16", features = ["derive"] }
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13", features = ["make"] }
tower-http = { version = "0.5.0", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
