[package]
name = "fsf"
version = "0.0.0-SNAPSHOT"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["util", "fs", "compression-full", "decompression-full", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
